[project]
name = "auto-merge-development"
version = "0.1.0"
description = ""
authors = [
    { name = "Nilton Teixeira", email = "9078708+niltonfrederico@users.noreply.github.com" },
]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = "^0.116.1" # Use older version

[tool.poetry.group.dev.dependencies]
requests = "^2.32.4" # Use older version to trigger updates
pytest = "^8.4.1"    # Use older version
mypy = "^1.17"      # Use older version
